--- a/apps/hello-work-job-searcher/src/app/jobs/page.module.css
+++ b/apps/hello-work-job-searcher/src/app/jobs/page.module.css
@@ -6,12 +6,15 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  gap: 1.2rem;
 }
+
 
 .headerSection {
   min-height: 0;
   flex: 2;
 }
+
 
 .listSection {
   min-height: 0;
